--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "files": [
     "scripts/**",
-    "src/**"
+    "src/**",
+    "templates/**"
   ],
   "scripts": {
     "release:dry": "release-it --dry-run --no-npm",
